# learn-simd

./: .gitignore  CMakeLists.txt  Makefile  bytes.c  dependency.mk  http_parse.c  http_parse.h  index_of_byte.c  memcmp.s  ngx_http_parse.c  test_bytes_eq.c  test_invalid_method.c  test_parse_method.c  test_parse_request.c
cmake/: clang_format.cmake  cmake_format.cmake  google_benchmark.cmake  google_test.cmake  hardening.cmake
src/: CMakeLists.txt  sample1.cc
tests/: CMakeLists.txt  bench_is_invalid_method.cc  example_benchmark.cc  sample1_unittest.cc
tmp/: bytes.c  bytes.h  dependency.mk  index_of_byte.c
